Programacion Orientada a Objetos

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /POO/POO-EjerciciosAprendizaje/nbproject/private/
+/POO/POO-EjerciciosAprendizajeExtra/nbproject/private/
+/POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
