--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /POO/POO-EjerciciosAprendizaje/nbproject/private/
 /POO/POO-EjerciciosAprendizajeExtra/nbproject/private/
 /POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
+/Colecciones/Collections-EjerciciosGuia/nbproject/private/
