--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /POO/POO-EjerciciosAprendizajeExtra/nbproject/private/
 /POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
 /Colecciones/Collections-EjerciciosGuia/nbproject/private/
+/Colecciones/Collections-EjerciciosGuia/build/
