--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
 /Colecciones/Collections-EjerciciosGuia/nbproject/private/
 /Colecciones/Collections-EjerciciosGuia/build/
+/Colecciones/Collections-EjerciciosAprendizaje/nbproject/private/
