--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Colecciones/Collections-EjerciciosGuia/nbproject/private/
 /Colecciones/Collections-EjerciciosGuia/build/
 /Colecciones/Collections-EjerciciosAprendizaje/nbproject/private/
+/POO/POO-EjerciciosAprendizajeExtraExtra/build/
