--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Colecciones/Collections-EjerciciosGuia/build/
 /Colecciones/Collections-EjerciciosAprendizaje/nbproject/private/
 /POO/POO-EjerciciosAprendizajeExtraExtra/build/
+/Colecciones/Collections-EjerciciosAprendizaje/build/
