--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Colecciones/Collections-EjerciciosAprendizaje/nbproject/private/
 /POO/POO-EjerciciosAprendizajeExtraExtra/build/
 /Colecciones/Collections-EjerciciosAprendizaje/build/
+/Colecciones/Collections-EjerciciosExtras/Collections-EjerciciosExtras/nbproject/private/
+/Colecciones/Collections-EjerciciosExtras/nbproject/private/
