--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Colecciones/Collections-EjerciciosAprendizaje/build/
 /Colecciones/Collections-EjerciciosExtras/Collections-EjerciciosExtras/nbproject/private/
 /Colecciones/Collections-EjerciciosExtras/nbproject/private/
+/Colecciones/Collections-EjerciciosExtras/build/
