--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Colecciones/Collections-EjerciciosExtras/Collections-EjerciciosExtras/nbproject/private/
 /Colecciones/Collections-EjerciciosExtras/nbproject/private/
 /Colecciones/Collections-EjerciciosExtras/build/
+/Relaciones/Relaciones-EjerciciosGuia/build/
