--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Colecciones/Collections-EjerciciosExtras/nbproject/private/
 /Colecciones/Collections-EjerciciosExtras/build/
 /Relaciones/Relaciones-EjerciciosGuia/build/
+/Relaciones/Relaciones-EjerciciosAprendizaje/nbproject/private/
+/Relaciones/Relaciones-EjerciciosAprendizaje/build/
