--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Relaciones/Relaciones-EjerciciosGuia/build/
 /Relaciones/Relaciones-EjerciciosAprendizaje/nbproject/private/
 /Relaciones/Relaciones-EjerciciosAprendizaje/build/
+/Relaciones/Relaciones-EjerciciosAprendizajeExtra/nbproject/private/
