--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Relaciones/Relaciones-EjerciciosAprendizaje/nbproject/private/
 /Relaciones/Relaciones-EjerciciosAprendizaje/build/
 /Relaciones/Relaciones-EjerciciosAprendizajeExtra/nbproject/private/
+/Relaciones/Relaciones-EjerciciosAprendizajeExtra/build/
