--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /Relaciones/Relaciones-EjerciciosAprendizaje/build/
 /Relaciones/Relaciones-EjerciciosAprendizajeExtra/nbproject/private/
 /Relaciones/Relaciones-EjerciciosAprendizajeExtra/build/
+/Herencia/Herencia-Ejercicios/nbproject/private/
+/Herencia/Herencia-EjerciciosAprendizaje/nbproject/private/
+/Herencia/Herencia-EjerciciosAprendizajeExtra/nbproject/private/
