--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /Herencia/Herencia-Ejercicios/nbproject/private/
 /Herencia/Herencia-EjerciciosAprendizaje/nbproject/private/
 /Herencia/Herencia-EjerciciosAprendizajeExtra/nbproject/private/
+/Herencia/Herencia-Ejercicios/build/
