--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /Herencia/Herencia-EjerciciosAprendizaje/nbproject/private/
 /Herencia/Herencia-EjerciciosAprendizajeExtra/nbproject/private/
 /Herencia/Herencia-Ejercicios/build/
+/Herencia/Herencia-EjerciciosAprendizaje/build/
