--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 /Herencia/Herencia-EjerciciosAprendizajeExtra/nbproject/private/
 /Herencia/Herencia-Ejercicios/build/
 /Herencia/Herencia-EjerciciosAprendizaje/build/
+/10-Colecciones/Collections-EjerciciosAprendizaje/build/
+/10-Colecciones/Collections-EjerciciosAprendizaje/nbproject/private/
+/10-Colecciones/Collections-EjerciciosExtras/build/
+/10-Colecciones/Collections-EjerciciosExtras/nbproject/private/
+/10-Colecciones/Collections-EjerciciosGuia/build/
+/10-Colecciones/Collections-EjerciciosGuia/nbproject/private/
