--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 /10-Colecciones/Collections-EjerciciosExtras/nbproject/private/
 /10-Colecciones/Collections-EjerciciosGuia/build/
 /10-Colecciones/Collections-EjerciciosGuia/nbproject/private/
+/09-Colecciones/Collections-EjerciciosAprendizaje/build/
+/09-Colecciones/Collections-EjerciciosAprendizaje/nbproject/private/
+/09-Colecciones/Collections-EjerciciosExtras/build/
+/09-Colecciones/Collections-EjerciciosExtras/nbproject/private/
+/09-Colecciones/Collections-EjerciciosGuia/build/
+/09-Colecciones/Collections-EjerciciosGuia/nbproject/private/
