--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /09-Colecciones/Collections-EjerciciosExtras/nbproject/private/
 /09-Colecciones/Collections-EjerciciosGuia/build/
 /09-Colecciones/Collections-EjerciciosGuia/nbproject/private/
+/Herencia/Herencia-EjerciciosAprendizajeExtra/build/
