--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 /09-Colecciones/Collections-EjerciciosGuia/build/
 /09-Colecciones/Collections-EjerciciosGuia/nbproject/private/
 /Herencia/Herencia-EjerciciosAprendizajeExtra/build/
+/11-Herencia/Herencia-Ejercicios/build/
+/11-Herencia/Herencia-Ejercicios/nbproject/private/
+/11-Herencia/Herencia-EjerciciosAprendizaje/build/
+/11-Herencia/Herencia-EjerciciosAprendizaje/nbproject/private/
+/11-Herencia/Herencia-EjerciciosAprendizajeExtra/build/
+/11-Herencia/Herencia-EjerciciosAprendizajeExtra/nbproject/private/
