--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@
 /11-Herencia/Herencia-EjerciciosAprendizaje/nbproject/private/
 /11-Herencia/Herencia-EjerciciosAprendizajeExtra/build/
 /11-Herencia/Herencia-EjerciciosAprendizajeExtra/nbproject/private/
+/10-Relaciones/Relaciones-EjerciciosGuia/build/
+/10-Relaciones/Relaciones-EjerciciosAprendizaje/build/
+/10-Relaciones/Relaciones-EjerciciosAprendizaje/nbproject/private/
+/10-Relaciones/Relaciones-EjerciciosAprendizajeExtra/build/
+/10-Relaciones/Relaciones-EjerciciosAprendizajeExtra/nbproject/private/
+/10-Relaciones/Relaciones-EjerciciosGuia/nbproject/private/
