--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@
 /10-Relaciones/Relaciones-EjerciciosAprendizajeExtra/build/
 /10-Relaciones/Relaciones-EjerciciosAprendizajeExtra/nbproject/private/
 /10-Relaciones/Relaciones-EjerciciosGuia/nbproject/private/
+/08-Programacion Orientada a Objetos/POO-EjerciciosAprendizaje/nbproject/private/
+/08-Programacion Orientada a Objetos/POO-EjerciciosAprendizajeExtra/nbproject/private/
+/08-Programacion Orientada a Objetos/POO-EjerciciosAprendizajeExtraExtra/build/
+/08-Programacion Orientada a Objetos/POO-EjerciciosAprendizajeExtraExtra/nbproject/private
+/08-POO/POO-EjerciciosAprendizaje/nbproject/private/
+/08-POO/POO-EjerciciosAprendizajeExtra/nbproject/private/
+/08-POO/POO-EjerciciosAprendizajeExtraExtra/build/
+/08-POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
