--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@
 /08-POO/POO-EjerciciosAprendizajeExtra/nbproject/private/
 /08-POO/POO-EjerciciosAprendizajeExtraExtra/build/
 /08-POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
+/07-JavaIntroduccion/JavaIntro/nbproject/private/
