--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@
 /08-POO/POO-EjerciciosAprendizajeExtraExtra/build/
 /08-POO/POO-EjerciciosAprendizajeExtraExtra/nbproject/private/
 /07-JavaIntroduccion/JavaIntro/nbproject/private/
+/12-Excepciones/Excepciones-EjerciciosAprendizaje/nbproject/private/
+/12-Excepciones/Excepciones-EjerciciosAprendizaje/build/
