--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /07-JavaIntroduccion/JavaIntro/nbproject/private/
 /12-Excepciones/Excepciones-EjerciciosAprendizaje/nbproject/private/
 /12-Excepciones/Excepciones-EjerciciosAprendizaje/build/
+/01 - Integrador/EjercicioIntegrador01/nbproject/private/
