--- a/14-JDBC/EjercicioAprendizaje01/nbproject/project.properties
+++ b/14-JDBC/EjercicioAprendizaje01/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EjercicioAprendizaje01
-main.class=EjercicioAprendizaje01
+main.class=tienda1.EjercicioAp01
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
