--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@
 /14-JDBC/EjercicioAprendizajeExtra01/nbproject/private/
 /14-JDBC/EjercicioAprendizaje01/nbproject/private/
 /14-JDBC/EjercicioAprendizaje01/build/
+/15-JPA/EjercicioAprendizaje01/nbproject/private/
+/15-JPA/EjercicioAprendizaje01/build/
+/15-JPA/EjercicioAprendizaje01/dist/
