--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@
 /15-JPA/EjercicioAprendizaje01/nbproject/private/
 /15-JPA/EjercicioAprendizaje01/build/
 /15-JPA/EjercicioAprendizaje01/dist/
+/15-JPA/EjercicioAprendizajeExtra01/nbproject/private/
